--- a/dev/css/theme.css
+++ b/dev/css/theme.css
@@ -2,3 +2,8 @@
 .width-test div {
 	background-color: orange;
 }
+
+.align-demo .fy-all > div,
+.align-demo .fy-alr > div {
+	border:1px solid #c2c2c2;
+}
