--- a/src/sass/components/align.scss
+++ b/src/sass/components/align.scss
@@ -1,5 +1,4 @@
-.fy-alc {
-
+.fy-all {
 	&:after {
 		content: '.';
 		display: block;
@@ -7,7 +6,30 @@
 		height: 0;
 		clear: both;
 	}
+	> * {
+		float: left;
+	}
 
+}
+.fy-alr {
+	&:after {
+		content: '.';
+		display: block;
+		visibility: hidden;
+		height: 0;
+		clear: both;
+	}
+	> * {
+		float: right;
+	}	
+}
+
+/*
+	&.-ar {
+		> * {
+			float: right;
+		}
+	}
 	&.-ctr {
 		display: inline-block;
 	    position: relative;
@@ -19,18 +41,4 @@
 	    	content:'';
 	    	display: none;
 	    }
-	}
-
-
-
-	> div {
-		float: left;
-	}
-
-	&.-ar {
-		> div {
-			float: right;
-		}
-	}
-	
-}
+	}*/
